<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/marginXLarge"
        android:elevation="16dp"
        android:src="@drawable/ic_back_arraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_menu_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/split_now"
        android:textColor="@color/split_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_mid_card_background"
        android:elevation="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/receipt_btn"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_shape"
            android:elevation="16dp"
            android:text="@string/receipt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receipt_btn"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/title"
            android:textColor="@color/background"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_title"
            android:layout_marginStart="156dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/text_title"
            android:text="@string/total_bill"
            android:textColor="@color/background"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_teamDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_title"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/team_dinner"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_teamDinner"
            android:layout_marginStart="156dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/text_title"
            android:text="@string/_750_86"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_below="@+id/text_teamDinner"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/inner_relative_background"
            android:elevation="16dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/animoji_thump1"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/animoji_thump1" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@+id/animoji_thump1"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/animoji_thump3" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/animoji_thump1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:elevation="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/animoji_thump2"
                app:civ_border_color="@color/background"
                app:civ_border_width="1.5dp" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/animoji_thump1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/splitting_with"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/animoji_thump1_main"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:elevation="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/animoji_thump2"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/me"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/animoji_thump1_main"
        app:layout_constraintStart_toEndOf="@+id/animoji_thump1_main"
        app:layout_constraintTop_toTopOf="@+id/animoji_thump1_main" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200_86"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:progressDrawable="@drawable/seekbar_sky"
        android:splitTrack="false"
        android:thumb="@drawable/ic_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/animoji_thump1_main"
        app:layout_constraintTop_toBottomOf="@+id/animoji_thump1_main" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/animoji_thump1_main2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:elevation="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/animoji_thump1"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cody"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/animoji_thump1_main2"
        app:layout_constraintStart_toEndOf="@+id/animoji_thump1_main2"
        app:layout_constraintTop_toTopOf="@+id/animoji_thump1_main2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_450"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:progressDrawable="@drawable/seekbar_purble"
        android:splitTrack="false"
        android:thumb="@drawable/ic_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/animoji_thump1_main2"
        app:layout_constraintTop_toBottomOf="@+id/animoji_thump1_main2" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/animoji_thump1_main3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:elevation="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/animoji_thump3"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sarah"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/animoji_thump1_main3"
        app:layout_constraintStart_toEndOf="@+id/animoji_thump1_main3"
        app:layout_constraintTop_toTopOf="@+id/animoji_thump1_main3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:progressDrawable="@drawable/seekbar_pink"
        android:splitTrack="false"
        android:thumb="@drawable/ic_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/animoji_thump1_main3"
        app:layout_constraintTop_toBottomOf="@+id/animoji_thump1_main3" />


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/cons"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/low_layout_background"
        android:elevation="16dp"
        app:layoutDescription="@xml/activity_main_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3">

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/low_button_shape"
            android:elevation="16dp"
            android:clickable="false"
            android:text="@string/confirm_split"
            android:textAllCaps="false"
            android:textColor="@color/split_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:rotation="270"
            android:scaleType="fitCenter"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/arrow" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.constraintlayout.widget.ConstraintLayout>